fixed svg home images spacing

--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -61,14 +61,9 @@ html {
   font-size: 64px;
   color: #fff;
 }
-.home-grid-container {
-  padding-left: 2%;
-  padding-right: 2%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 20% 80%;
-  max-width: 1000px;
-  justify-items: center;
-}
 
+.stack-images {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+}
